--- a/style/main.scss
+++ b/style/main.scss
@@ -1,1 +1,1 @@
-@import 'scss/variabels', 'scss/global', 'scss/navbar', 'scss/weather';
+@import 'scss/variabels', 'scss/global', 'scss/navbar', 'scss/weather', 'scss/index';
