--- a/style/main.css
+++ b/style/main.css
@@ -18,6 +18,16 @@ a {
   text-decoration: none;
 }
 
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0px -15px 10px -15px #2c5697;
+  text-align: center;
+  color: #ff7f32;
+  background: white;
+}
+
 .navbar {
   width: 100%;
   display: flex;
@@ -63,7 +73,6 @@ a {
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
   border-radius: 1rem;
   padding: 0 1rem;
-  width: 25rem;
 }
 .weather-card-header {
   color: #2c5697;
@@ -88,6 +97,11 @@ a {
 }
 .weather-card-body .metar-table .metar-column-right {
   color: #ff7f32;
+  border-color: #2c5697;
+}
+.weather-card-body .metar-table select {
+  color: #ff7f32;
+  padding: 0.1rem;
 }
 .weather-card-footer {
   text-align: center;
@@ -96,6 +110,33 @@ a {
   color: #ff7f32;
   opacity: 60%;
   font-size: 0.7em;
+}
+
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content .news {
+  width: 23rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  margin-top: 3rem;
+  border-radius: 1rem;
+  margin-bottom: 10rem;
+}
+.content .news-head {
+  text-align: center;
+  color: #2c5697;
+}
+.content .news-body {
+  padding: 0 1rem;
+}
+.content .news-body h4 {
+  color: #ff7f32;
+}
+.content .news-foot {
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
