--- a/style/scss/_weather.scss
+++ b/style/scss/_weather.scss
@@ -9,7 +9,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
     border-radius: 1rem;
     padding: 0 1rem;
-    width: 25rem;
+
 
     &-header {
       color: #2c5697;
@@ -40,6 +40,11 @@
 
         .metar-column-right {
           color: #ff7f32;
+          border-color: #2c5697;
+        }
+        select {
+          color: #ff7f32;
+          padding: 0.1rem;
         }
       }
     }
