--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,102 +18,33 @@ a {
   text-decoration: none;
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  box-shadow: 0px -15px 10px -15px #2c5697;
-  text-align: center;
-  color: #ff7f32;
-  background: white;
-}
-
 .navbar {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   box-shadow: 0px 15px 10px -15px #2c5697;
 }
-.navbar .leftNav {
-  display: flex;
-  align-items: center;
-}
-.navbar .leftNav .logo {
-  margin-left: 1rem;
-}
-.navbar .leftNav .logo img {
-  height: 3rem;
-  margin: 0.2rem 0 0 0.2rem;
-}
-.navbar .leftNav .links a {
-  color: #ff7f32;
-  margin-left: 1rem;
-  padding: 0.6rem 0.7rem;
-  border-left: 0.1rem solid #2c5697;
-  border-right: 0.1rem solid #2c5697;
-}
-.navbar .leftNav .links a:hover {
-  opacity: 60%;
-}
-.navbar .rightNav {
-  margin-right: 1rem;
-  width: 10%;
-  text-align: end;
+
+.t-p {
+  color: #2c5697;
 }
 
-.weather {
-  width: 90%;
-  margin: 3rem auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.weather-card {
-  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-  border-radius: 1rem;
-  padding: 0 1rem;
-}
-.weather-card-header {
-  color: #2c5697;
-  text-align: center;
-}
-.weather-card-header h2 {
-  padding: 0 1rem;
-}
-.weather-card-body .metar-table {
-  padding: 1rem;
-  margin: 0 auto;
-  border: 1px solid #2c5697;
-  border-radius: 1rem;
-}
-.weather-card-body .metar-table .metar-row {
-  padding: 0;
-  margin: 0;
-  line-height: 0;
-}
-.weather-card-body .metar-table .metar-column-left {
-  color: #2c5697;
-}
-.weather-card-body .metar-table .metar-column-right {
+.t-s {
   color: #ff7f32;
-  border-color: #2c5697;
 }
-.weather-card-body .metar-table select {
-  color: #ff7f32;
-  padding: 0.1rem;
+
+.b-p {
+  background-color: #2c5697;
 }
-.weather-card-footer {
-  text-align: center;
+
+.b-s {
+  background-color: #ff7f32;
 }
-.weather-card-footer p {
-  color: #ff7f32;
-  opacity: 60%;
-  font-size: 0.7em;
+
+.fs-s {
+  font-size: 0.8rem;
 }
 
 .content {
   width: 100%;
+  margin-top: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -121,7 +52,7 @@ a {
 .content .news {
   width: 23rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-  margin-top: 3rem;
+  margin-top: 20rem;
   border-radius: 1rem;
   margin-bottom: 10rem;
 }
