--- a/public/assets/css/scss/_weather.scss
+++ b/public/assets/css/scss/_weather.scss
@@ -1,62 +1,19 @@
-.weather {
-  width: 90%;
-  margin: 3rem auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.t-p {
+  color: #2c5697;
+}
 
-  &-card {
-    box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-    border-radius: 1rem;
-    padding: 0 1rem;
+.t-s {
+  color: #ff7f32;
+}
 
+.b-p {
+  background-color: #2c5697;
+}
 
-    &-header {
-      color: #2c5697;
-      text-align: center;
+.b-s {
+  background-color: #ff7f32;
+}
 
-      h2 {
-        padding: 0 1rem;
-      }
-    }
-
-    &-body {
-
-      .metar-table {
-        padding: 1rem;
-        margin: 0 auto;
-        border: 1px solid $primary;
-        border-radius: 1rem;
-
-        .metar-row {
-          padding: 0;
-          margin: 0;
-          line-height: 0;
-        }
-
-        .metar-column-left {
-          color: #2c5697;
-        }
-
-        .metar-column-right {
-          color: #ff7f32;
-          border-color: #2c5697;
-        }
-        select {
-          color: #ff7f32;
-          padding: 0.1rem;
-        }
-      }
-    }
-
-    &-footer {
-      text-align: center;
-
-      p{
-         color: #ff7f32;
-        opacity: 60%;
-        font-size: 0.7em;
-      }
-    }
-  }
+.fs-s {
+  font-size: 0.8rem;
 }
