-Changed the layout of homepage and weather page -Added TAF to the weather page -Started on the converter page.

--- a/public/assets/css/scss/_global.scss
+++ b/public/assets/css/scss/_global.scss
@@ -16,3 +16,27 @@ body {
 a {
     text-decoration: none;
 }
+
+.t-p {
+    color: #2c5697;
+}
+
+.t-s {
+    color: #ff7f32;
+}
+
+.b-p {
+    background-color: #2c5697;
+}
+
+.b-s {
+    background-color: #ff7f32;
+}
+
+.b-t {
+    background-color: transparent;
+}
+
+.fs-s {
+    font-size: 0.8rem;
+}
