--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,10 +18,6 @@ a {
   text-decoration: none;
 }
 
-.navbar {
-  box-shadow: 0px 15px 10px -15px #2c5697;
-}
-
 .t-p {
   color: #2c5697;
 }
@@ -38,36 +34,102 @@ a {
   background-color: #ff7f32;
 }
 
+.b-t {
+  background-color: transparent;
+}
+
 .fs-s {
   font-size: 0.8rem;
 }
 
-.content {
-  width: 100%;
-  margin-top: 10rem;
+.navbar {
+  box-shadow: 0px 15px 10px -15px #2c5697;
+}
+
+.weather-card {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
+  padding: 0.8rem;
+}
+
+.home {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+}
+.home-content {
+  flex: 3 1 0%;
+  vertical-align: top;
+  justify-content: flex-start;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  font-size: 1rem;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
 }
-.content .news {
-  width: 23rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-  margin-top: 20rem;
-  border-radius: 1rem;
-  margin-bottom: 10rem;
+.home-content-banner {
+  height: 10rem;
+  object-fit: cover;
+  padding: 1rem;
+  border-radius: 2rem;
+  width: 100%;
 }
-.content .news-head {
-  text-align: center;
+.home-content-header {
+  padding: 0.5rem;
+  font-weight: bold;
+  font-size: 1.1rem;
   color: #2c5697;
 }
-.content .news-body {
-  padding: 0 1rem;
+.home-content-card {
+  width: 100%;
 }
-.content .news-body h4 {
-  color: #ff7f32;
+.home-content-card-small-header {
+  font-weight: bold;
+  width: 100%;
+  color: #2c5697;
 }
-.content .news-foot {
+.home-information {
+  flex: 1 1 0%;
+  vertical-align: top;
+  place-content: stretch flex-start;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.home-information-version {
+  padding: 0.5rem;
   text-align: center;
+  font-size: 0.6rem;
+}
+.home-information-header {
+  padding: 0.5rem;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.3rem;
+  color: #2c5697;
+}
+.home-information-news {
+  width: 90%;
+  padding: 0.8rem;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
+}
+.home-information-news-header {
+  padding: 0.5rem;
+  color: #ff7f32;
+  background-color: #2c5697;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1rem;
+}
+.home-information-news-body {
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+.home-information-news-footer {
+  padding: 0.5rem;
+  text-align: center;
+  background-color: #2c5697;
+  color: #ff7f32;
+  font-size: 0.8rem;
 }
 
 /*# sourceMappingURL=main.css.map */
