--- a/public/assets/css/scss/_weather.scss
+++ b/public/assets/css/scss/_weather.scss
@@ -1,19 +1,6 @@
-.t-p {
-  color: #2c5697;
-}
 
-.t-s {
-  color: #ff7f32;
-}
-
-.b-p {
-  background-color: #2c5697;
-}
-
-.b-s {
-  background-color: #ff7f32;
-}
-
-.fs-s {
-  font-size: 0.8rem;
+.weather-card {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+  0.3em 0.3em 1em $primary;
+  padding: 0.8rem;
 }
