--- a/public/assets/css/scss/_index.scss
+++ b/public/assets/css/scss/_index.scss
@@ -15,8 +15,6 @@
     0.3em 0.3em 1em $primary;
 
     &-banner {
-      height: 10rem;
-      object-fit: cover;
       padding: 1rem;
       border-radius: 2rem;
       width: 100%;
@@ -66,6 +64,7 @@
 
     &-news {
       width: 90%;
+      margin-bottom: 1rem;
       padding: 0.8rem;
       box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
       0.3em 0.3em 1em $primary;
