--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -42,12 +42,15 @@ a {
   font-size: 0.8rem;
 }
 
+.bshadow {
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
+}
+
 .navbar {
   box-shadow: 0px 15px 10px -15px #2c5697;
 }
 
 .weather-card {
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
   padding: 0.8rem;
 }
 
@@ -64,7 +67,6 @@ a {
   flex-direction: column;
   padding: 1rem;
   font-size: 1rem;
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
 }
 .home-content-banner {
   padding: 1rem;
@@ -109,7 +111,6 @@ a {
   width: 90%;
   margin-bottom: 1rem;
   padding: 0.8rem;
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em #2c5697;
 }
 .home-information-news-header {
   padding: 0.5rem;
