--- a/public/assets/css/scss/_global.scss
+++ b/public/assets/css/scss/_global.scss
@@ -40,3 +40,8 @@ a {
 .fs-s {
     font-size: 0.8rem;
 }
+
+.bshadow {
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em $primary;
+}
